--- a/build_plugin.gradle
+++ b/build_plugin.gradle
@@ -110,6 +110,7 @@ task downloadEmmyDebugger(type: Download) {
             "https://github.com/EmmyLua/EmmyLuaDebugger/releases/download/${emmyDebuggerVersion}/emmy_core.dylib",
             "https://github.com/ElPsyCongree/EmmyLuaDebugger/releases/download/${emmyDebuggerVersion}/emmy_core@x64.zip",
             "https://github.com/EmmyLua/EmmyLuaDebugger/releases/download/${emmyDebuggerVersion}/emmy_core@x86.zip",
+            "https://github.com/EmmyLua/EmmyLuaLegacyDebugger/releases/download/${emmyLegacyDebuggerVersion}/debugger.zip"
     ])
     dest "temp"
 }
@@ -123,16 +124,19 @@ task unzipEmmyDebugger(type: Copy, dependsOn: downloadEmmyDebugger) {
         //include "emmy_core.dll"
         into "x86"
     }
+    from(zipTree("temp/debugger.zip")) {
+        into "legacy"
+    }
     destinationDir file("temp")
 }
 
 task installEmmyDebugger(dependsOn: unzipEmmyDebugger, type: Copy) {
     from("temp/x64/") {
-        include "emmy_core.dll"
+        //include "emmy_core.dll"
         into "debugger/emmy/windows/x64"
     }
     from("temp/x86/") {
-        include "emmy_core.dll"
+        //include "emmy_core.dll"
         into "debugger/emmy/windows/x86"
     }
     from("temp") {
@@ -142,6 +146,10 @@ task installEmmyDebugger(dependsOn: unzipEmmyDebugger, type: Copy) {
     from("temp") {
         include "emmy_core.dylib"
         into "debugger/emmy/mac"
+    }
+    from("temp/legacy") {
+        include "**/*"
+        into "debugger/windows"
     }
     destinationDir file("src/main/resources")
 }
