--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  */
 def versions = [:]
 versions["201"] = [
-    ideaSDKVersion: "IC-201.6487.11-EAP-SNAPSHOT",
+    ideaSDKVersion: "IC-201.6668.121",
     sinceBuild: "193",
     untilBuild: "201.*",
     archiveName: "IntelliJ-EmmyLua"
