修改下打包脚本，必须提交才能生效

--- a/build_plugin.gradle
+++ b/build_plugin.gradle
@@ -218,8 +218,8 @@ task buildPluginWithBunch() {
         // switch
         exec {
             executable isWin ? "bunch/bin/bunch.bat" : "bunch/bin/bunch"
-//            args "switch", ".", IDEA_VER
-            args "cp", ".", IDEA_VER
+            args "switch", ".", IDEA_VER
+//            args "cp", ".", IDEA_VER
         }
         // reset to HEAD
         exec {
