不需要运行bunch了

--- a/build_plugin.gradle
+++ b/build_plugin.gradle
@@ -198,7 +198,7 @@ buildPlugin.from(fileTree(dir: RES_DIR, include: '!!DONT_UNZIP_ME!!.txt')) {
 // apply patchs before build plugin
 task buildPluginWithBunch() {
     finalizedBy buildPlugin
-//* 方便快速注释
+/* 方便快速注释
     doLast {
         // reset
         exec {
